syntax = "proto3";

package demo.example;
option go_package = "github.com/infraboard/demo/pkg/example";

import "github.com/infraboard/protoc-gen-go-ext/extension/tag/tag.proto";

// Book todo
message Book {
    // 唯一ID
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id"'}
        ];
    // 名称
    string name =2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name"'}
        ];
}

// BookSet todo
message BookSet {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Book items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}
