syntax = "proto3";

package demo.example;
option go_package = "github.com/infraboard/demo/pkg/example";

// CreateBookRequest 创建Book请求
message CreateBookRequest {
    // 应用名称
    string name = 1;
}
